--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.6",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "mongoose": "^8.15.1",
     "mongoose-paginate-v2": "^1.9.1",
     "nodemon": "^3.1.10",
