--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "mongoose": "^8.15.1",
     "mongoose-paginate-v2": "^1.9.1",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
     "sweetalert2": "^11.21.2"
   }
