--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^5.5.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "mongoose-paginate-v2": "^1.9.1",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
